Implemented PR Suggestions

--- a/docs/docs/contribute/contributing-guide.mdx
+++ b/docs/docs/contribute/contributing-guide.mdx
@@ -6,19 +6,19 @@ Before you submit your first PR, please read the following guide. We'd hate to s
 
 Sharing is caring!
 
-## You have an idea for a New Command
+## You have an idea for a new command
 
 Awesome! Good ideas are invaluable for every product. Before you start hacking away, please check if there is no similar idea already listed in the [issue list](https://github.com/pnp/cli-microsoft365/issues). This ensures that your idea is unique and not being worked on. If you don't find a similar idea, create a new issue describing your idea. Once we agree on the feature scope and architecture, the feature will be ready for building. Don't hesitate to mention this in the issue if you'd like to build the feature yourself. If it's the first time you're building a command, see the [guidance article](https://github.com/pnp/cli-microsoft365/wiki/Adding-a-command) explaining in detail what you will need at a minimum.
 
-## You have a Suggestion for Improving an Existing Command
+## You have a suggestion for improving an existing command
 
 Nothing is perfect. If you have an idea for how to improve an existing command or the CLI itself, let us know by submitting an issue in the [issue list](https://github.com/pnp/cli-microsoft365/issues). We value your input. Some things are done for a reason, but some are not. Let's discuss what you think and see how the project could be improved for everyone.
 
-## You've found a Bug
+## You've found a bug
 
 Bugs happen. When you find a bug, please have a look at the [issue list](https://github.com/pnp/cli-microsoft365/issues) to validate if a similar bug has already been logged. This helps avoid duplicate bug reports. If you don't find a similar bug report, let us know what isn't working and provide steps to reproduce it. If we can't reproduce your bug, we will ask you for clarification, which will only delay the resolution.
 
-## Fixing Typos
+## Fixing typos
 
 Typos are embarrassing! Most PRs that fix typos will be accepted immediately. To make it easier to review the PR, please narrow the focus instead of sending a huge PR of fixes.
 
@@ -31,11 +31,11 @@ Typos are embarrassing! Most PRs that fix typos will be accepted immediately. To
 - **DO NOT** surprise us with big PRs. Instead, file an issue and start a discussion so we can agree on a direction before you invest a large amount of time.
 - **DO NOT** commit code you didn't write. We encourage you to contribute your own work to maintain
 
-## Contribution Paths
+## Contribution paths
 
 Before you start contributing, it's important to ensure that your environment is set up correctly. You can refer to the extensive guide on how to achieve this: [Setting up your environment](./environment-setup.mdx).
 
-### Adding a New Command
+### Adding a new command
 
 Once your environment is set up, you can learn how to add a new command to the CLI for Microsoft 365 by following these steps:
 
@@ -45,7 +45,7 @@ Once your environment is set up, you can learn how to add a new command to the C
 4. [Help Page](./new-command/writing-the-docs.mdx)
 5. [Submitting the Pull Request (PR)](./creating-the-pr.mdx)
 
-### Adding a New Script Sample
+### Adding a new script sample
 
 Explore the process of adding a new script sample to the CLI for Microsoft 365 with the following steps:
 
