--- a/docs/docs/contribute/new-command/build-command-logic.mdx
+++ b/docs/docs/contribute/new-command/build-command-logic.mdx
@@ -1,6 +1,6 @@
-# Building the Command
+# Building the command
 
-:::note
+:::tip
 
 Once you have correctly set up your local environment, you can run `npm run watch` in the background to test your changes live. This command enables live reloading, allowing you to see the effects of your modifications in real-time as you make edits to the code. This is especially useful for quickly iterating and verifying the behavior of your changes before finalizing them.
 
@@ -8,7 +8,7 @@ Once you have correctly set up your local environment, you can run `npm run watc
 
 To start writing the logic for the command, you will need to create a new TypeScript file. All the command services can be found in the folder `src/m365`. Here you will find all the services available within the CLI for Microsoft 365. Each service contains a subfolder named `commands` where all the service commands are located. For our example issue, mentioned [here](./step-by-step-guide.mdx#new-command-get-site-group), that will be `src/m365/spo/commands`.
 
-:::tip
+:::note
 
 When the service has a lot of commands within the `commands` folder, they will be split up into subfolders. For example, `src/m365/spo/commands/group`.
 
@@ -16,11 +16,11 @@ When the service has a lot of commands within the `commands` folder, they will b
 
 When you are in the correct folder, you can create two new files: your command file `group-get.ts` and a file for the unit tests `group-get.spec.ts`.
 
-## Minimum Command File
+## Minimum command file
 
 With our two new files created, we can start working on our `group-get.ts` file. Each command in the CLI for Microsoft 365 is defined as a class extending the [Command](https://github.com/pnp/cli-microsoft365/blob/main/src/Command.ts) base class. At a minimum, a command must define `name`, `description`, and `commandAction`:
 
-```ts
+```ts title="src/m365/spo/commands/group/group-get.ts"
 import commands from '../../commands';
 import { Logger } from '../../../../cli/Logger';
 import SpoCommand from '../../../base/SpoCommand';
@@ -34,7 +34,7 @@ class SpoGroupGetCommand extends SpoCommand {
     return 'Gets site group';
   }
 
-  public async commandAction(logger: Logger): Promise<void> {
+  public async commandAction(logger: Logger, args: CommandArgs): Promise<void> {
     if (this.verbose) {
       logger.logToStderr(`Retrieving information for group in site ...`);
     }
@@ -48,7 +48,7 @@ module.exports = new SpoGroupGetCommand();
 
 Depending on your command and the service for which you're building the command, there might be a base class that you can use to simplify the implementation. For example, for SPO, you can inherit from the [SpoCommand](https://github.com/pnp/cli-microsoft365/blob/main/src/m365/base/SpoCommand.ts) base class. This class contains several helper methods to simplify your implementation.
 
-### Include Command Name
+### Include command name
 
 When you create the minimum file, you'll get an error about a nonexistent type within `commands`. This is correct because we haven't defined the name of the command yet. Let's add this to the `commands` export located in `src/m365/spo/commands.ts`:
 
@@ -62,21 +62,21 @@ export default {
 };
 ```
 
-Next, to enhance our command with options, validators, telemetry, there are a bunch of methods already available for you.
+Next, to enhance our command with options, validators, telemetry, there are a bunch of methods already available for you. When you make use of a method we order them alphabetically.
 
-## Defining the Options
+## Defining the options
 
-When the command requires options to be passed along, we will define them in the interface `Options`. This interface extends from our GlobalOptions, where the common options `query`, `output`, `debug`, and `verbose` are defined. When an option is optional, let's make sure that it's also optional in the interface.
+When the command requires options to be passed along, we will define them in the interface `Options`. This interface extends from our `GlobalOptions`, where the common options `query`, `output`, `debug`, and `verbose` are defined. When an option is optional, let's make sure that it's also optional in the interface.
 
-We will also define the options in the method `#initOptions`. Here we pass along the option name, as a possible abbreviation for the option, to the `this.options` object. In some occasions, the option will always require a predefined input. When this is the case, we can define them under the property `autocomplete`.
+We will also define the options in the method `#initOptions`. Here we pass along the option name, as a possible abbreviation for the option, to the `this.options` object. In some occasions, the option will always require a predefined input (an option with a fixed amount of choices). When this is the case, we can define them under the property `autocomplete`.
 
-:::tip
+:::info
 
-Required options are denoted as `--required <required>`, and optional options are denoted as `--optional [optional]`.
+Required options are denoted as `--required <required>`, optional options are denoted as `--optional [optional]`, and flag options are denoted as `--flag`.
 
 :::
 
-```ts title="group-get.ts"
+```ts title="src/m365/spo/commands/group/group-get.ts"
 // ...
 import GlobalOptions from '../../../../GlobalOptions';
 
@@ -128,11 +128,11 @@ class SpoGroupGetCommand extends SpoCommand {
 }
 ```
 
-## Option Validation
+## Option validation
 
-The options that are passed along won't always be correct from the first attempt. So instead of passing faulty values to the required API, we can write option validation that runs before `commandAction` is executed. This can be done in the method `initValidators`. Conditions can be written here to validate the option values and return an error when they're faulty. Once again, there are already several validation methods you can make use of to check some common options, e.g., `validation.isValidSharePointUrl(...)`.
+The options that are passed along won't always be correct from the first attempt. So instead of passing faulty values to the API, we can write option validation that runs before `commandAction` is executed. This can be done in the method `#initValidators`. Conditions can be written here to validate the option values and return an error when they're faulty. Once again, there are already several validation methods you can make use of to check some common options, e.g., `validation.isValidSharePointUrl(...)`.
 
-```ts title="group-get.ts"
+```ts title="src/m365/spo/commands/group/group-get.ts"
 // ...
 import { validation } from '../../../../utils/validation';
 
@@ -164,11 +164,11 @@ class SpoExampleListCommand extends Command {
 }
 ```
 
-## Option Sets
+## Option sets
 
-Option sets are used to ensure that one option contains a value from a set of options. When no option is used, the command will return an error, and the same goes when multiple of these options are used. To make use of the option sets, you can use the method `#initOptionSets`.
+Option sets are used to ensure that only one option has a value from a set of options. When no option is used, the command will return an error, and the same goes when multiple of these options are used. To make use of the option sets, you can use the method `#initOptionSets`.
 
-```ts title="group-get.ts"
+```ts title="src/m365/spo/commands/group/group-get.ts"
 class SpoExampleListCommand extends Command {
   constructor() {
     super();
@@ -180,16 +180,38 @@ class SpoExampleListCommand extends Command {
   // ...
 
   #initOptionSets(): void {
-    this.optionSets.push(['id', 'name', 'associatedGroup']);
+    this.optionSets.push({ options: ['id', 'name', 'associatedGroup'] });
   }
 }
+```
+
+this.optionSets.push({
+      options: ['userId', 'userName'],
+      runsWhen: (args) => args.options.userId || args.options.userName
+    });
+
+Option sets also allow you to define `runsWhen` for a set of options. This allows you to define a condition when the option set should be executed. E.g., when the option `title` is defined, either the option set `ownerGroupId` and `ownerGroupName` should be required.
+
+```ts title="src/m365/planner/commands/plan/plan-set.ts"
+  #initOptionSets(): void {
+    this.optionSets.push(
+      {
+        options: ['id', 'title', 'rosterId']
+      },
+      {
+        options: ['ownerGroupId', 'ownerGroupName'],
+        runsWhen: (args) => {
+          return args.options.title !== undefined;
+        }
+      });
+  }
 ```
 
 ## Telemetry
 
 The CLI for Microsoft 365 tracks the usage of the different commands using Azure Application Insights. By default, for each command, the CLI tracks its name and whether it's been executed in debug/verbose mode or not. If your command has additional properties that should be included in the telemetry, you can define them by implementing the `#initTelemetry` method and adding your properties to the `this.telemetryProperties` object.
 
-```ts title="group-get.ts"
+```ts title="src/m365/spo/commands/group/group-get.ts"
 class SpoExampleListCommand extends Command {
   constructor() {
     super();
@@ -213,7 +235,13 @@ class SpoExampleListCommand extends Command {
 }
 ```
 
-## Command Action
+:::note 
+
+We are only listing the option options in `#initTelemetry`. Since the required options are always used, we don't include them in the telemetry.
+
+:::
+
+## Command action
 
 After everything is written for our options, we can start to write the logic required to execute the command. This will be done, as mentioned before, in the method `commandAction`. The command will start with a verbose message explaining what we are about to do, and then we start writing the command logic. Here you can write several new methods to be called in `commandAction` to keep the code a bit tidier.
 
@@ -223,7 +251,7 @@ When writing your code, there are a few pointers to keep in mind:
 - Async tasks will be written with async/await.
 - When an endpoint errors, make sure that the output is returned to the user.
 
-```ts title="group-get.ts"
+```ts title="src/m365/spo/commands/group/group-get.ts"
 class SpoExampleListCommand extends Command {
   // ...
 
@@ -249,14 +277,14 @@ class SpoExampleListCommand extends Command {
 
 After this, the new command will be fully functional. During development, it can be useful to have `npm run watch` running in the background. This builds the entire project first. After this, a watcher will ensure that every time a file is saved, an incremental build is triggered. This means that not the entire project is rebuilt, but only the changed files. That way, you can easily apply new changes to the command and test it out locally.
 
-> In the end, your command file will look something like this: [group-get.ts](https://github.com/pnp/cli-microsoft365/blob/main/src/m365/spo/commands/group/group-get.ts)
+In the end, your command file will look something like this: [group-get.ts](https://github.com/pnp/cli-microsoft365/blob/main/src/m365/spo/commands/group/group-get.ts)
 
-## Running it Locally
+## Running it locally
 
 Before creating a PR, you should test your code locally. This will help you catch bugs, errors, and performance issues early on and ensure that the code functions as intended before it is made available to real users. You can execute `npm run watch` to start a live watcher. This will build the entire project first, and after that, a watcher will ensure that every time a file is saved, an incremental build is triggered. This means that not the entire project is rebuilt, but only the changed files. This makes it easy to make quick changes and test them immediately after saving them.
 
-If this command fails, be sure to check if your environment has been set up correctly following the guidelines of ["Setting up your local project"](../environment-setup.mdx#setting-up-your-local-project).
+If this command fails, be sure to check if your environment has been set up correctly following the guidelines of [Setting up your local project](../environment-setup.mdx#setting-up-your-local-project).
 
-## Next Step
+## Next step
 
 Now that the command is fully functional we will need to add some tests to ensure that the command works as expected. This will be explained in the next chapter: [Unit Tests](./unit-tests.mdx).
