--- a/docs/docs/contribute/new-command/step-by-step-guide.mdx
+++ b/docs/docs/contribute/new-command/step-by-step-guide.mdx
@@ -1,4 +1,4 @@
-# Creating a New Command
+# Creating a new command
 
 Awesome! Good ideas are invaluable for every product.
 
@@ -10,17 +10,17 @@ Before you start hacking away, please check if there is no similar idea already 
 
 Once we agree on the feature scope and architecture, the feature will be ready for building. Don't hesitate to mention this in the issue if you'd like to build the feature yourself. When you start creating a new command, you will need to write the command logic, unit tests, and documentation. Here's a detailed guide on how to create a new command from scratch.
 
-## Creating a New Branch
+## Creating a new branch
 
 Once you have cloned the repository, create a new branch to work on using the command `git checkout -b [branch name] main`. This branch will contain your changes and will be used to create the pull request.
 
-## Step-by-Step Guide
+## Step-by-step guide
 
 We will guide you through a workflow on how to create a new command from scratch, starting from an example issue. This example will be used throughout the step-by-step guide to provide more insight into a realistic scenario.
 
 ---
 
-## New command: Get site group
+## New command: get site group
 
 ### Usage
 
@@ -61,6 +61,6 @@ m365 spo group get --webUrl https://contoso.sharepoint.com/sites/project-x --ass
 
 ---
 
-## Next Step
+## Next step
 
 With the sample command specs `m365 spo group get` in mind, we will now move on to the next step, which is building the command logic. Please refer to the following link for detailed instructions: [Command Logic](./build-command-logic.mdx).
