--- a/docs/docs/contribute/new-command/writing-the-docs.mdx
+++ b/docs/docs/contribute/new-command/writing-the-docs.mdx
@@ -1,12 +1,6 @@
-# Write the Command Specs
+# Write the command specs
 
-:::note
-
-Once you have correctly set up your local environment, you can run `npm run watch` in the background to test your changes live. This command enables live reloading, allowing you to see the effects of your modifications in real-time as you make edits to the code. This is especially useful for quickly iterating and verifying the behavior of your changes before finalizing them.
-
-:::
-
-Each command has a corresponding manual page. The contents of this page are almost identical to the help implemented in the command itself. This way, users working with the CLI can get help directly inside the CLI, while users interested in the capabilities of the CLI, can browse through the help pages published in our documentation. In the CLI for Microsoft 365, we extend this basic information with additional remarks and examples to help users work with the CLI. This will also be published in the terminal when users execute your command with the `--help` flag. 
+Each command has a corresponding documentation page. The contents of this page are almost identical to the help implemented in the command itself. This way, users working with the CLI can get help directly inside the CLI, while users interested in the capabilities of the CLI, can browse through the help pages published in our documentation. In the CLI for Microsoft 365, we extend this basic information with additional remarks and examples to help users work with the CLI. This will also be published in the terminal when users execute your command with the `--help` flag. 
 
 All the command help files are written in [Markdown](https://www.markdownguide.org/cheat-sheet/#overview) and can be found in the folder `docs/docs/cmd`. This will have a similar look and file to the src folder structure for the commands. One difference here is that the command groups with a lot of similar commands won't be bundled in a `commands` folder. For our example, we can create a new file named `group-get.mdx` in the folder `docs/docs/cmd/spo/group`.
 
@@ -30,11 +24,11 @@ Your terminal should point to the `docs` folder.
 npm start
 ```
 
-## Minimum Help File 
+## Minimum help file 
 
-With our help file created, we can start work writing down the command specs. A help file for a command will have at minimum the following topics. The command name as the title, a description, the usage, options, a few examples on how to use them, and a sample response output. We'll start with the `title`, `description`, and `usage`.
+With our help file created, we can start writing down the command specs. A help file for a command will have at minimum the following topics. The command name as the title, a description, the usage, options, a few examples on how to use them, and a sample response output. We'll start with the `title`, `description`, and `usage`.
 
-````md title="group-get.mdx"
+````md title="docs\docs\cmd\spo\group\group-get.mdx"
 # spo group get
 
 Gets site group
@@ -50,7 +44,7 @@ m365 spo group get [options]
 
 Most commands will have unique options but every command will make use of our global options. This can be achieved by including `<Global />` under the heading options. This will include the global options in the help page. Before we can use the global options tag, we need to import it from `/docs/cmd/_global.mdx`. This can be done by adding the following import at the top of your help file.
 
-````md title="group-get.mdx"
+````md title="docs\docs\cmd\spo\group\group-get.mdx"
 import Global from '/docs/cmd/_global.mdx';
 
 <!-- ... -->
@@ -74,7 +68,7 @@ import Global from '/docs/cmd/_global.mdx';
 <Global />
 ````
 
-:::tip
+:::note
 
 When listing available options for the particular command, CLI for Microsoft 365 follows the naming convention where required options are wrapped in angle brackets (`< >`) while optional options are wrapped in square brackets (`[ ]`).
 
@@ -82,18 +76,18 @@ When listing available options for the particular command, CLI for Microsoft 365
 
 ### Examples
 
-As they say, a picture is worth a thousand words, same goes for examples of code. This is why we strive to add several examples for each command with some logical option data. This gives more insight to users on how they can implement the command in their script.
+As they say, a picture is worth a thousand words, same goes for examples of code. This is why we strive to add several examples for each command with some logical option data. This gives more insight to users on how they can implement the command in their script. We require at least 2 examples per command (if possible).
 
-````md title="group-get.mdx"
+````md title="docs\docs\cmd\spo\group\group-get.mdx"
 ## Examples
 
-Get group with ID _7_ for web _https://contoso.sharepoint.com/sites/project-x_
+Get a specific group by its ID
 
 ```sh
 m365 spo group get --webUrl https://contoso.sharepoint.com/sites/project-x --id 7
 ```
 
-Get group with name _Team Site Members_ for web _https://contoso.sharepoint.com/sites/project-x_
+Get a specific group by its name
 
 ```sh
 m365 spo group get --webUrl https://contoso.sharepoint.com/sites/project-x --name "Team Site Members"
@@ -115,7 +109,7 @@ Some pointers to keep in mind when including sample data in our examples.
 
 We include the response output for each command to give more insight into what users can expect from this command. This is especially useful for commands that return a lot of data. We include the response output in the following formats: JSON, Text, CSV, and Markdown. This is done by using the `Tabs` component from the Docusaurus library. This component allows us to include multiple tabs with different content. The `TabItem` component is used to include the content for each tab. The `value` attribute is used to specify the name of the tab. Make sure to include the `Tabs` and `TabItem` imports at the top of your help file.
 
-````md title="group-get.mdx"
+````md title="docs\docs\cmd\spo\group\group-get.mdx"
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
@@ -126,7 +120,7 @@ import TabItem from '@theme/TabItem';
 <Tabs>
   <TabItem value="JSON">
 
-  ``` json
+  ```json
   {
     "Id": 1,
     "IsHiddenInUI": false,
@@ -145,7 +139,7 @@ import TabItem from '@theme/TabItem';
   </TabItem>
   <TabItem value="Text">
 
-  ``` text
+  ```text
   AllowMembersEditMembership    : false
   AllowRequestToJoinLeave       : false
   AutoAcceptRequestToJoinLeave  : false
@@ -163,7 +157,7 @@ import TabItem from '@theme/TabItem';
   </TabItem>
   <TabItem value="CSV">
 
-  ``` text
+  ```csv
   Id,IsHiddenInUI,LoginName,Title,PrincipalType,AllowMembersEditMembership,AllowRequestToJoinLeave,AutoAcceptRequestToJoinLeave,Description,OnlyAllowMembersViewMembership,OwnerTitle,RequestToJoinLeaveEmailSetting
   1,,Contoso Visitors,Contoso Visitors,8,,,,Contoso Visitors,,Contoso Owners,
   ```
@@ -210,9 +204,11 @@ Each different verb of command can return a different type of response. This mea
 [The docs article](https://pnp.github.io/cli-microsoft365/cmd/planner/plan/plan-list/)
 [The MarkDown file location](https://github.com/pnp/cli-microsoft365/blob/main/docs/docs/cmd/planner/plan/plan-list.mdx?plain=1)
 
-!!! Note
+:::caution
 
-    Make sure the `Text` output is also in the list format with a single object.
+Make sure the `Text` output is also in the list format with a single object.
+
+:::
 
 - **Multiple responses based on the options used** (planner plan add)
 
@@ -259,7 +255,7 @@ Here we can include some links to the APIs we used in the command or some docume
 - SharePoint home sites: a landing for your organization on the intelligent intranet: https://techcommunity.microsoft.com/t5/Microsoft-SharePoint-Blog/SharePoint-home-sites-a-landing-for-your-organization-on-the/ba-p/621933
 ```
 
-## Include into the Command Navigation
+## Include into the command navigation
 
 Now that your page is finished, we need to make it available from the command navigation, most commonly found on the left side of the page. To include this, we need to edit the file `sidebars.js` found in the folder `src/config`. Navigate through the section `commands` and locate your commands command group. Here you can add the path to your new help page. 
 
@@ -291,6 +287,6 @@ const sidebars = {
 }    
 ```
 
-## Next Step
+## Next step
 
 With this chapter complete, the command is finished. The next step is to submit your local code to the CLI for Microsoft 365 repository. This is explained in the next chapter, creating the PR: [Submitting the Pull Request (PR)](../creating-the-pr.mdx).
