--- a/docs/docs/_clisettings.mdx
+++ b/docs/docs/_clisettings.mdx
@@ -9,7 +9,7 @@ Setting name|Definition|Default value
 `csvQuotedEmpty`|Quote empty strings and overrides quoted_string on empty strings when defined|`false`
 `disableTelemetry`|Disables sending of telemetry data|`false`
 `errorOutput`|Defines if errors should be written to `stdout` or `stderr`|`stderr`
-`helpMode`|Defines what part of command's help to display. Allowed values are `options`, `examples`, `remarks`, `response`, `full`|`full`
+`helpMode`|Defines what part of command's help to display. Allowed values are `options`, `examples`, `remarks`, `response`, `full`|`options`
 `output`|Defines the default output when issuing a command. Allowed values are `json`, `text`, `csv`, `md`, `none`|`json`
 `printErrorsAsPlainText`|When output mode is set to `json`, print error messages as plain-text rather than JSON|`true`
 `prompt`|Prompts for missing values in required options and enables interactive selection when multiple values are available for a command that requires a specific value to be retrieved.|`false`
